--- a/trunk/gui/src/ErrorForm.resx
+++ b/trunk/gui/src/ErrorForm.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,44 +117,4 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="j0382575[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0382575[1].jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="j0280748[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0280748[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="j0414870[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0414870[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="j0379009[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0379009[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="j0078736[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0078736[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="j0295745[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0295745[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="j0404277[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0404277[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="PSSM" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\PSSM.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="j0371208[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0371208[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="j0230844[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0230844[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="bd09375_[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bd09375_[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="j0404413[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\j0404413[1].wmf;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
 </root>
